examples/c/error-codes/violates-constraint/fatal/CV-TDG4-bad-static.output
CV-TDG4-bad-static.c:3:10: error: illegal storage class on file-scoped variable
auto int a;
         ^
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
